--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@drewbot/sass-flexbox-grid": "^2.0.7",
+    "@glidejs/glide": "^3.4.1",
     "hamburgers": "^1.1.3",
     "lozad": "^1.14.0",
     "smoothscroll-polyfill": "^0.4.4"
